--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ aiohttp-proxy
 flask==3.0.3
 gunicorn==22.0.0
 uvicorn==0.30.1 # <-- Добавляем эту строку
+asgiref==3.8.1 # <-- Добавляем эту строку
