--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ flask==3.0.3
 gunicorn==22.0.0
 uvicorn==0.30.1 # <-- Добавляем эту строку
 asgiref==3.8.1 # <-- Добавляем эту строку
+
+
+google-api-python-client==2.132.0 # Или более новая версия
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
